[gd_scene load_steps=27 format=3 uid="uid://vfqtbyv2di3h"]

[ext_resource type="Script" path="res://scripts/ibex_boss.gd" id="1_78y3i"]
[ext_resource type="Texture2D" uid="uid://b4koe2asrs17r" path="res://art/ibexsheet.png" id="2_ahvg2"]
[ext_resource type="Texture2D" uid="uid://btpeu3pmi1g8x" path="res://art/shadow.png" id="2_e6rpe"]
[ext_resource type="FontFile" uid="uid://btp5ny0vcgf34" path="res://fonts/alagard.ttf" id="4_235uw"]
[ext_resource type="Script" path="res://scripts/bossUI.gd" id="4_vu4ix"]
[ext_resource type="Script" path="res://scripts/stateMachine.gd" id="7_0d00o"]
[ext_resource type="Script" path="res://scripts/attack.gd" id="8_2b6r1"]
[ext_resource type="FontFile" uid="uid://v2dunwyf5lmj" path="res://fonts/VeniceClassic.ttf" id="8_m7tmp"]
[ext_resource type="Script" path="res://scripts/follow.gd" id="9_ffwve"]
[ext_resource type="Script" path="res://scripts/idle.gd" id="10_q7i2u"]
[ext_resource type="Script" path="res://scripts/charge.gd" id="12_3mqhp"]
[ext_resource type="Script" path="res://scripts/enrage.gd" id="12_ndy01"]
[ext_resource type="AudioStream" uid="uid://c4mjpnugk11a6" path="res://sfx/RockSmash.wav" id="13_pkfb0"]
[ext_resource type="AudioStream" uid="uid://bovjql537pewj" path="res://sfx/Hit.wav" id="14_rtmbp"]
[ext_resource type="AudioStream" uid="uid://c36vscn8xn5gh" path="res://sfx/gallop.wav" id="15_cmsj6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n4x6a"]

[sub_resource type="Animation" id="Animation_y8e7a"]
resource_name = "Attack"
length = 0.8
step = 0.04
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.01, 0.6, 0.72),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4, 0.44, 0.48, 0.52, 0.56, 0.6, 0.64, 0.68),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StateMachine/Attack")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6, 0.8),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"attackFX"
}, {
"args": [],
"method": &"onAttackEnd"
}]
}

[sub_resource type="Animation" id="Animation_ibh4d"]
resource_name = "Charge"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_5k3ky"]
resource_name = "Die"
length = 4.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vcakv"]
resource_name = "EnrageStomp"
length = 0.8
step = 0.04
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4, 0.44, 0.48, 0.52, 0.56, 0.6, 0.64, 0.68, 0.72, 0.76),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StateMachine/Enrage")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stompSwitch"
}]
}

[sub_resource type="Animation" id="Animation_1s1dk"]
resource_name = "Gait"
length = 0.96
loop_mode = 1
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16, 0.32, 0.48, 0.64, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 27, 28, 29, 30]
}

[sub_resource type="Animation" id="Animation_c0t4k"]
resource_name = "Idle"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qvias"]
_data = {
"Attack": SubResource("Animation_y8e7a"),
"Charge": SubResource("Animation_ibh4d"),
"Die": SubResource("Animation_5k3ky"),
"EnrageStomp": SubResource("Animation_vcakv"),
"Gait": SubResource("Animation_1s1dk"),
"Idle": SubResource("Animation_c0t4k")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_418pr"]
radius = 13.0
height = 92.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_87rqh"]
size = Vector2(63, 94)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jxu7n"]
size = Vector2(70.3652, 95.5555)

[node name="Kufuu, Unbound Ibex" type="CharacterBody2D" groups=["Enemies"]]
z_index = 1
position = Vector2(597, 540)
collision_mask = 5
script = ExtResource("1_78y3i")
meleeRange = 60
chargeSpeed = 300
chargeBonus = 30
minDamage = 20
maxDamage = 30
maxHealth = 3000
baseSpeed = 80

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.3)
position = Vector2(4.17761, 25.3895)
scale = Vector2(2.90123, 3.42594)
texture = ExtResource("2_e6rpe")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_n4x6a")
position = Vector2(-1, -31)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_ahvg2")
hframes = 6
vframes = 6
frame = 6
region_rect = Rect2(0, 0, 86, 81)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_qvias")
}

[node name="UI" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("4_vu4ix")

[node name="ProgressBar" type="ProgressBar" parent="UI"]
self_modulate = Color(1, 0, 0, 1)
custom_minimum_size = Vector2(200, 0)
anchors_preset = -1
anchor_left = 0.34809
anchor_top = 1.0
anchor_right = 0.65191
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -27.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_235uw")
max_value = 3000.0
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="UI/ProgressBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.430791
anchor_top = 0.703704
anchor_right = 0.569209
anchor_bottom = 0.703704
offset_left = -110.0
offset_top = -49.0
offset_right = 107.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_235uw")
theme_override_font_sizes/font_size = 24
text = "KUFUU, UNBOUND IBEX"
metadata/_edit_use_anchors_ = true

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(-0.0446167, 16.1673)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_418pr")

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(11.9553, -16.8326)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-12.9553, 16.3326)
rotation = 1.5708
shape = SubResource("RectangleShape2D_87rqh")
debug_color = Color(0, 0.639216, 0.352941, 0.419608)

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(-0.266846, 0.945068)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(60.0842, -1.36292)
shape = SubResource("RectangleShape2D_jxu7n")
disabled = true
one_way_collision_margin = 0.0
debug_color = Color(0.992157, 0, 0.266667, 0.419608)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hitbox"]
position = Vector2(6.26684, -0.945068)
polygon = PackedVector2Array(56.9999, 1, 0, 36, 0, -39)

[node name="debug" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_top = -0.0123457
anchor_right = 0.0199653
anchor_bottom = 0.00462963
offset_left = -18.8889
offset_top = -87.7778
offset_right = 30.1111
offset_bottom = -61.7778
theme_override_fonts/font = ExtResource("8_m7tmp")
text = "debug
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource("7_0d00o")

[node name="Attack" type="Node2D" parent="StateMachine"]
script = ExtResource("8_2b6r1")

[node name="Follow" type="Node2D" parent="StateMachine"]
script = ExtResource("9_ffwve")

[node name="Idle" type="Node2D" parent="StateMachine"]
script = ExtResource("10_q7i2u")

[node name="Charge" type="Node2D" parent="StateMachine"]
script = ExtResource("12_3mqhp")

[node name="Enrage" type="Node2D" parent="StateMachine"]
script = ExtResource("12_ndy01")

[node name="DamageNumbersPosition" type="Marker2D" parent="."]
position = Vector2(0, -51)

[node name="SFX" type="Node2D" parent="."]

[node name="SlamSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("13_pkfb0")
bus = &"sfx"

[node name="HitSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("14_rtmbp")
volume_db = -6.0
bus = &"sfx"

[node name="GallopSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("15_cmsj6")
bus = &"sfx"

[node name="ChargeTimer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="ChargeDurationTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="EruptionTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[connection signal="body_entered" from="Hurtbox" to="StateMachine/Charge" method="_on_hurtbox_body_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="ChargeTimer" to="StateMachine/Follow" method="_on_charge_timer_timeout"]
[connection signal="timeout" from="ChargeDurationTimer" to="StateMachine/Charge" method="_on_charge_duration_timer_timeout"]
[connection signal="timeout" from="EruptionTimer" to="StateMachine/Enrage" method="_on_eruption_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="StateMachine/Attack" method="_on_attack_timer_timeout"]
